// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CommandMenuItem update should fail when updating a non-existent command menu item 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "COMMAND_MENU_ITEM_NOT_FOUND",
    "userFriendlyMessage": "Command menu item not found.",
  },
  "message": "Command menu item not found",
  "name": "NotFoundError",
}
`;

exports[`CommandMenuItem update should fail when updating with empty id 1`] = `
{
  "extensions": {
    "code": "GRAPHQL_VALIDATION_FAILED",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
    "value": "",
  },
  "message": "Invalid UUID",
  "name": "ValidationError",
}
`;

exports[`CommandMenuItem update should fail when updating with empty label 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "commandMenuItem": [
        {
          "errors": [
            {
              "code": "INVALID_COMMAND_MENU_ITEM_INPUT",
              "message": "Label is required",
              "userFriendlyMessage": "Label is required",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "commandMenuItem",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 commandMenuItem",
    "summary": {
      "commandMenuItem": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Metadata validation failed",
  },
  "message": "Multiple validation errors occurred while updating command menu item",
  "name": "GraphQLError",
}
`;

exports[`CommandMenuItem update should fail when updating with invalid id (not a UUID) 1`] = `
{
  "extensions": {
    "code": "GRAPHQL_VALIDATION_FAILED",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
    "value": "not-a-valid-uuid",
  },
  "message": "Invalid UUID",
  "name": "ValidationError",
}
`;

exports[`CommandMenuItem update should fail when updating with missing id 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Field "id" of required type "UUID!" was not provided.",
  "name": "GraphQLError",
}
`;
